rs/macros/tests/ui/gprogram_fails_multiple_not_allowed_on_one_impl.rs
use sails_macros::program;

struct MyProgram;

#[program]
#[program]
impl MyProgram {
    pub fn new() -> Self {
        Self
    }
}

#[tokio::main]
async fn main() {}
